Fix #2 - Form btn title not visible in edit-mode

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -381,6 +381,11 @@ text-align: right;
   font-weight: bold;
 }
 
+.form_submit input:disabled {
+  color: #fff;
+  color: rgba(255,255,255,.5);
+}
+
 .form_error {
 
   color: #c71414;
